Fixed css layout issue on the smallest mobile devices

--- a/app/public/css/app.css
+++ b/app/public/css/app.css
@@ -104,6 +104,8 @@ p, h1, h2 {
 
 #servicesForm {
     display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
     align-items: center;
     margin: 0 auto;
     gap: var(--size-4);
